--- a/Desktop/rear-end-basis/SpringBoot/community/pom.xml
+++ b/Desktop/rear-end-basis/SpringBoot/community/pom.xml
@@ -90,6 +90,18 @@
             <artifactId>mybatis-spring</artifactId>
             <version>2.0.5</version>
         </dependency>
+
+        <dependency>
+            <groupId>org.junit.platform</groupId>
+            <artifactId>junit-platform-commons</artifactId>
+            <version>1.6.2</version>
+            <scope>compile</scope>
+        </dependency>
+        <dependency>
+            <groupId>commons-lang</groupId>
+            <artifactId>commons-lang</artifactId>
+            <version>2.5</version>
+        </dependency>
     </dependencies>
 
     <build>
