--- a/Desktop/blog/package.json
+++ b/Desktop/blog/package.json
@@ -12,6 +12,7 @@
     "element-ui": "^2.14.1",
     "vue": "^2.6.11",
     "vue-clock2": "^1.1.5",
+    "vue-let-it-snow": "^1.0.0",
     "vue-router": "^3.2.0",
     "vuex": "^3.4.0"
   },
@@ -29,6 +30,7 @@
     "prettier": "^1.19.1",
     "sass": "^1.26.5",
     "sass-loader": "^8.0.2",
+    "vue-particles": "^1.0.9",
     "vue-template-compiler": "^2.6.11"
   }
 }
