--- a/Desktop/blog/package.json
+++ b/Desktop/blog/package.json
@@ -8,9 +8,18 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@kangc/v-md-editor": "^1.5.4",
+    "axios": "^0.21.0",
     "core-js": "^3.6.5",
     "element-ui": "^2.14.1",
+    "less": "^3.12.2",
+    "less-loader": "^7.1.0",
+    "markdown-it": "^12.0.2",
+    "qs.js": "^0.1.12",
+    "showdown": "^1.9.1",
     "vue": "^2.6.11",
+    "vue-axios": "^3.2.0",
+    "vue-canvas-effect": "0.0.12",
     "vue-clock2": "^1.1.5",
     "vue-let-it-snow": "^1.0.0",
     "vue-router": "^3.2.0",
