--- a/Desktop/blog/package.json
+++ b/Desktop/blog/package.json
@@ -15,6 +15,7 @@
     "less": "^3.12.2",
     "less-loader": "^7.1.0",
     "markdown-it": "^12.0.2",
+    "moment": "^2.29.1",
     "qs.js": "^0.1.12",
     "showdown": "^1.9.1",
     "vue": "^2.6.11",
